--- a/src/styles/reduction.scss
+++ b/src/styles/reduction.scss
@@ -18,6 +18,7 @@
 @import "components/page";
 @import "components/widget";
 @import "components/search-input";
+@import "components/slider-landing";
 
 // themes
 @import "themes/colors";
